--- a/skeleton 2/css/01-header.css
+++ b/skeleton 2/css/01-header.css
@@ -1,2 +1,44 @@
 /* PHASE 1: Header */
 
+
+body {
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.header-nav {
+    width: 960px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-logo {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.header-list {
+    font-size: 18px;
+}
+
+.header-list ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.header-list li {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.header-list li a {
+    color: white;
+    text-decoration: none;
+}
+
+button {
+    cursor: pointer;
+}
